--- a/Recsys - practical work.ipynb
+++ b/Recsys - practical work.ipynb
@@ -42,26 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "source": [
     "from surprise import Dataset, Reader\r\n",
     "import pandas as pd\r\n",
     "from surprise.prediction_algorithms.baseline_only import BaselineOnly\r\n",
-    "from surprise import KNNBa, NMF, SVDsic\r\n",
+    "from surprise import KNsicNBa, NMF, sic\r\n",
     "from surprise.model_selection import train_test_split\r\n",
     "from surprise import accuracy\r\n",
-    "from surprise.model_selection.validation import cross_va\n",
-    "import numpy as nplidate"
+    "from surprise.model_sel.validationdation import validateoss_va\n",
+    "import numpylidate"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "source": [
-    "df = pd.read_csv('cleaned_movie_ratings.csv', index_col=0)\r\n",
-    "input_file = 'cleaned_ratings_no_index.csv'\r\n",
+    "df = pd.read_csv('data/cleaned_movie_ratings.csv', index_col=0)\r\n",
+    "input_file = data/'cleaned_ratings_no_index.csv'\r\n",
     "df.iloc[:, :4].to_csv(input_file, index=False)"
    ],
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "source": [
     "reader = Reader(line_format='user item rating timestamp', skip_lines=1, rating_scale=(0,5), sep=',')\r\n",
     "\r\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 9
     }
    ],
    "source": [
