--- a/Recsys - practical work.ipynb
+++ b/Recsys - practical work.ipynb
@@ -156,82 +156,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the msd similarity matrix...\n",
-      "Done computing similarity matrix.\n",
+      "...output reduced for readability...\n",
       "Computing the msd similarity matrix...\n",
       "Done computing similarity matrix.\n",
       "Computing the msd similarity matrix...\n",
@@ -279,42 +204,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the cosine similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the pearson similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the pearson similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the pearson similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the pearson similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the pearson similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the pearson similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the pearson similarity matrix...\n",
-      "Done computing similarity matrix.\n",
-      "Computing the pearson similarity matrix...\n",
-      "Done computing similarity matrix.\n",
+      "...output reduced for readability...\n",
       "Computing the pearson similarity matrix...\n",
       "Done computing similarity matrix.\n",
       "Computing the pearson similarity matrix...\n",
